fix: security - remove scripts and SQL files from git, fix build error
Security Issues Fixed:
1. Scripts folder exposed user creation scripts with credentials
2. SQL files (create-user.sql, check-users.sql) contained sensitive data
3. Need to keep these files local only

Build Error Fixed:
- Remove top-level await from next.config.ts (causing SyntaxError)
- setupDevPlatform not needed for production build
- Cloudflare Pages handles environment automatically

Changes:
- Add /scripts/ to .gitignore
- Add /*.sql to .gitignore (except schema.sql)
- Remove scripts/ from git tracking
- Remove sensitive SQL files from git tracking
- Simplify next.config.ts (remove async setup)
- Keep schema.sql (safe to commit, no credentials)

IMPORTANT:
- scripts/create-user.ts is now LOCAL ONLY
- Never commit user credentials or SQL outputs
- These files stay in local dev environment only

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,10 @@ worker-configuration.d.ts
 
 # Documentation (local only)
 /docs/
+
+# Scripts (contains user credentials, local only)
+/scripts/
+
+# SQL files (may contain sensitive data)
+/*.sql
+!schema.sql
